--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -7,4 +7,5 @@ edition = { workspace = true }
 anyhow = "1.0.95"
 serde = { version = "1.0.217", features = ["derive"] }
 thiserror = "2.0.9"
-uuid = { version = "1.11.0", features = ["serde"] }
+uuid = { version = "1.3", features = ["v4"] }
+time = "0.3"
