fix: SearchTool schema for Gemini API compatibility
- Change Input type from String to SearchInput struct
- Generate proper "type": "object" schema for function calling
- Fix author() method bug in SearchTool

Fixes #577

--- a/crates/tools/Cargo.toml
+++ b/crates/tools/Cargo.toml
@@ -15,5 +15,6 @@ url.workspace = true
 async-trait.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+schemars.workspace = true
 thiserror.workspace = true
 scraper.workspace = true
