--- a/apps/lazagent/package.json
+++ b/apps/lazagent/package.json
@@ -10,11 +10,22 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "alith": "^0.11.1"
+    "@aeon-ai-pay/x402": "^0.0.22",
+    "@aeon-ai-pay/x402-axios": "^0.0.5",
+    "@aeon-ai-pay/x402-hono": "^0.0.5",
+    "@hono/node-server": "^1.19.6",
+    "alith": "^0.11.1",
+    "cors": "^2.8.5",
+    "ethers": "^6.0.0",
+    "express": "^4.18.0",
+    "hono": "^4.10.6",
+    "viem": "^2.39.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/node-rsa": "^1.1.4",
     "@types/react": "^19",
