--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -4,7 +4,8 @@ build-backend = "maturin"
 
 [project]
 name = "alith"
-requires-python = ">=3.7"
+# PyO3 0.23.x supports up to CPython 3.13; reflect that in metadata
+requires-python = ">=3.7,<3.14"
 classifiers = [
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
