--- a/sdks/node/package.json
+++ b/sdks/node/package.json
@@ -107,6 +107,7 @@
   "dependencies": {
     "@openpgp/web-stream-tools": "^0.1.3",
     "@phala/dstack-sdk": "^0.2.2",
+    "@pinecone-database/pinecone": "^3.0.3",
     "@qdrant/js-client-rest": "^1.13.0",
     "alith": "^0.10.4",
     "async-mutex": "^0.5.0",
