--- a/.github/workflows/node-sdk.yaml
+++ b/.github/workflows/node-sdk.yaml
@@ -54,7 +54,13 @@ jobs:
         run: npm install -g alith --retry=3 --retry-delay=2000
 
       - name: Install dependencies
-        run: npm ci --retry=3 --retry-delay=2000
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci --retry=3 --retry-delay=2000
+          else
+            npm install --retry=3 --retry-delay=2000
+          fi
+        shell: bash
 
       - name: Build
         run: npm run build
@@ -112,7 +118,13 @@ jobs:
           npm config set fetch-retry-mintimeout 20000
           npm config set fetch-retry-maxtimeout 120000
       - name: Install dependencies
-        run: npm ci --retry=3 --retry-delay=2000
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci --retry=3 --retry-delay=2000
+          else
+            npm install --retry=3 --retry-delay=2000
+          fi
+        shell: bash
       - name: Build
         shell: bash
         working-directory: .
@@ -150,7 +162,12 @@ jobs:
           npm config set fetch-retry-mintimeout 20000
           npm config set fetch-retry-maxtimeout 120000
       - name: Install dependencies
-        run: npm ci --retry=3 --retry-delay=2000
+        run: |
+          if (Test-Path package-lock.json) {
+            npm ci --retry=3 --retry-delay=2000
+          } else {
+            npm install --retry=3 --retry-delay=2000
+          }
       - name: Build
         shell: bash
         run: ${{ matrix.settings.build }}
@@ -201,7 +218,13 @@ jobs:
           npm config set fetch-retry-mintimeout 20000
           npm config set fetch-retry-maxtimeout 120000
       - name: Install dependencies
-        run: npm ci --retry=3 --retry-delay=2000
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci --retry=3 --retry-delay=2000
+          else
+            npm install --retry=3 --retry-delay=2000
+          fi
+        shell: bash
       - name: Build
         run: ${{ matrix.settings.build }}
         shell: bash
@@ -237,7 +260,13 @@ jobs:
           npm config set fetch-retry-maxtimeout 120000
 
       - name: Install dependencies
-        run: npm ci --retry=3 --retry-delay=2000
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci --retry=3 --retry-delay=2000
+          else
+            npm install --retry=3 --retry-delay=2000
+          fi
+        shell: bash
 
       - name: Download all artifacts
         uses: actions/download-artifact@v4
