fix(node-sdk): upgrade zod and zod-to-json-schema to resolve peer dependency conflict
- Upgrade zod from 3.24.4 to ^3.25.0
- Upgrade zod-to-json-schema from ^3.24.1 to ^3.25.0
- Fixes npm install ERESOLVE error in CI due to incompatible zod version
- Regenerated package-lock.json with updated dependencies

--- a/sdks/node/package.json
+++ b/sdks/node/package.json
@@ -121,7 +121,7 @@
     "node-rsa": "^1.1.1",
     "openpgp": "^6.1.1",
     "web3": "^4.16.0",
-    "zod": "3.24.4",
-    "zod-to-json-schema": "^3.24.1"
+    "zod": "^3.25.0",
+    "zod-to-json-schema": "^3.25.0"
   }
 }
