--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -84,18 +84,51 @@ jobs:
           choco install -y cmake pkgconfiglite
           refreshenv
 
-          # Install nettle via vcpkg (MSVC-compatible)
-          git clone https://github.com/Microsoft/vcpkg.git C:\vcpkg
-          C:\vcpkg\bootstrap-vcpkg.bat
-          C:\vcpkg\vcpkg install nettle:x64-windows
-          
-          # Set environment variables for nettle-sys
-          echo "VCPKG_ROOT=C:\vcpkg" >> $env:GITHUB_ENV
-          echo "NETTLE_STATIC=1" >> $env:GITHUB_ENV
-          echo "PKG_CONFIG_PATH=C:\vcpkg\installed\x64-windows\lib\pkgconfig" >> $env:GITHUB_ENV
-          
-          # Add vcpkg directories to PATH for libraries and DLLs
-          echo "C:\vcpkg\installed\x64-windows\bin" >> $env:GITHUB_PATH
+          # Ensure a clean vcpkg folder
+          if (Test-Path 'C:\vcpkg') { Remove-Item -Recurse -Force 'C:\vcpkg' }
+
+          git clone --depth 1 https://github.com/microsoft/vcpkg.git C:\vcpkg
+
+          # Download vcpkg.exe with retries (avoid transient 504s)
+          $vcpkgExeUrl = 'https://github.com/microsoft/vcpkg-tool/releases/download/2025-12-05/vcpkg.exe'
+          $maxAttempts = 5
+          for ($i = 1; $i -le $maxAttempts; $i++) {
+            try {
+              Invoke-WebRequest -Uri $vcpkgExeUrl -OutFile C:\vcpkg\vcpkg.exe -UseBasicParsing -ErrorAction Stop
+              Write-Host "Downloaded vcpkg.exe"
+              break
+            } catch {
+              Write-Host "Attempt $i failed: $($_.Exception.Message)"
+              Start-Sleep -Seconds (5 * $i)
+              if ($i -eq $maxAttempts) {
+                throw "Failed to download vcpkg.exe after $maxAttempts attempts."
+              }
+            }
+          }
+
+          # Bootstrap (will use local vcpkg.exe if present)
+          & 'C:\vcpkg\bootstrap-vcpkg.bat'
+
+          # Install nettle with retries
+          $maxAttempts = 3
+          for ($i = 1; $i -le $maxAttempts; $i++) {
+            try {
+              & 'C:\vcpkg\vcpkg.exe' install nettle:x64-windows
+              break
+            } catch {
+              Write-Host "vcpkg install attempt $i failed: $($_.Exception.Message)"
+              Start-Sleep -Seconds (5 * $i)
+              if ($i -eq $maxAttempts) {
+                throw "vcpkg install failed after $maxAttempts attempts."
+              }
+            }
+          }
+
+          # Set environment variables for nettle-sys and add vcpkg bin to PATH
+          'VCPKG_ROOT=C:\vcpkg' | Out-File -FilePath $env:GITHUB_ENV -Encoding ASCII -Append
+          'NETTLE_STATIC=1' | Out-File -FilePath $env:GITHUB_ENV -Encoding ASCII -Append
+          'PKG_CONFIG_PATH=C:\vcpkg\installed\x64-windows\lib\pkgconfig' | Out-File -FilePath $env:GITHUB_ENV -Encoding ASCII -Append
+          'C:\vcpkg\installed\x64-windows\bin' | Out-File -FilePath $env:GITHUB_PATH -Encoding ASCII -Append
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
